--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -10,10 +10,23 @@
     transform: translateY(-50%);
     border-radius: 10px;
     background: linear-gradient(to bottom right, #ffaaaa 28%, #f6c1c1,#e8f680);
-    display: flex;
-    flex-direction: column-reverse;
+    display: block;
+    flex-direction: column;
     box-shadow: 0px 0px 2px #ffaaaa;
     justify-content: flex-start;
+    overflow: auto;
+    overflow-y: auto;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+}
+
+.commands {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #output {
